--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,12 @@
-#spring.h2.console.enabled=true
-#spring.h2.console.path=/h2-console
-#spring.datasource.url=jdbc:h2:mem:testdb;MODE=MYSQL
-spring.datasource.url=jdbc:mysql://springboot-database.c2stfymp94yl.ap-northeast-2.rds.amazonaws.com:3306/myblog
-spring.datasource.username=sws
-spring.datasource.password=tkddnjs12
-spring.jpa.hibernate.ddl-auto=update
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+spring.datasource.url=jdbc:h2:mem:testdb;MODE=MYSQL
+spring.datasource.username=sa
+spring.datasource.password=
+#spring.datasource.url=jdbc:mysql://springboot-database.c2stfymp94yl.ap-northeast-2.rds.amazonaws.com:3306/myblog
+#spring.datasource.username=sws
+#spring.datasource.password=tkddnjs12
+#spring.jpa.hibernate.ddl-auto=update
+
+spring.web.resources.static-locations=classpath:/static/
+spring.web.resources.add-mappings=true
